--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,38 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+header{
+    height: 100px;
+}
+.row{
+    height: 100%;
+}
+
+.col{
+    display: flex;
+    align-items: center;
+    height: 100%;
+    justify-content: space-around;
+}
+
+
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#grid{
+    display: flex;
+    flex-wrap: wrap;
+    width: 1000px;
+    height: 1000px;
+}
+
+.square{
+    background-color: dodgerblue;
+    border: 2px white solid;
+    width: calc(1000px /10);
+    height:calc(1000px /10) ;
+}
