--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ main{
     align-items: center;
 }
 
-#grid{
+#griglia{
     display: flex;
     flex-wrap: wrap;
     width: 1000px;
@@ -33,8 +33,13 @@ main{
 }
 
 .square{
-    background-color: dodgerblue;
+    background-color: rgb(255, 131, 30);
     border: 2px white solid;
     width: calc(1000px /10);
     height:calc(1000px /10) ;
+}
+
+
+.clicked{
+    background-color: dodgerblue;
 }
